--- a/_posts/testFolder/2022-01-09-test.md
+++ b/_posts/testFolder/2022-01-09-test.md
@@ -1,7 +1,7 @@
 ---
 layout: single
-title:  "2022-01-01 토요일"
-categories: JIHO
+title:  "2022-01-09 일요일"
+categories: test
 ---
 
 # BLACKCODE GIT BLOG
