--- a/_posts/JIHO/HD/2022-01-06-jiho20220106.md
+++ b/_posts/JIHO/HD/2022-01-06-jiho20220106.md
@@ -1,17 +1,18 @@
 ---
 layout: single
-title:  "2022-01-07 금요일"
-categories: JIHO
+title:  "2022-01-06 목요일 개발일지"
+categories: 현대백화점
 ---
 
 # 마이페이지 구독투홈
 
 ## 과거 구독했던 상품
-- 구독투홈 MENU active 비활성화 수정건 (완료)
+- 구독투홈 MENU active 비활성화 수정건 (진행중)
 - 상품list Sorting Querry 테스트 (데이터 부족으로 진행 정지)
 
 ## 현재 구독중인 상품
 - 페이징처리 테스트 (데이터 부족으로 진행 정지)
 - 배송지 변경 버튼 기능 구현[모바일 참조] (진행중)
 - 상품list Sorting Querry 테스트(데이터 부족으로 진행 정지)
-- 정기구독 메인 LISTUP 확인[회차별 진행사항 이해 필요]
+
+## 주간보고서 작성
