--- a/_posts/JIHO/HD/2022-01-04-jiho20220104.md
+++ b/_posts/JIHO/HD/2022-01-04-jiho20220104.md
@@ -1,7 +1,7 @@
 ---
 layout: single
-title:  "2022-01-04 화요일"
-categories: JIHO
+title:  "2022-01-04 화요일 개발일지"
+categories: 현대백화점
 ---
 
 # 마이페이지 구독투홈
