--- a/_posts/JIHO/HD/2022-01-05-jiho20220105.md
+++ b/_posts/JIHO/HD/2022-01-05-jiho20220105.md
@@ -1,7 +1,7 @@
 ---
 layout: single
-title:  "2022-01-05 수요일"
-categories: JIHO
+title:  "2022-01-05 수요일 개발일지"
+categories: 현대백화점
 ---
 
 # 마이페이지 구독투홈
