--- a/_posts/JIHO/HD/2022-01-03-jiho20220103.md
+++ b/_posts/JIHO/HD/2022-01-03-jiho20220103.md
@@ -1,13 +1,13 @@
 ---
 layout: single
-title:  "2022-01-03 월요일"
+title:  "2022-01-03 월요일 개발일지"
 categories: 현대백화점
 ---
 
-# 정기구독 상세
+## 정기구독 상세
 - 하단 지난회차 상품 필수정보 데이터 인입(완료)
 - 구매기간 날짜 포멧작업 (완료)
 - 페이징처리 (완료)
-# 마이페이지 구독투홈
+## 마이페이지 구독투홈
 - 현재 구독중인 상품 페이징 쿼리 생성(완료)
 - 과거 구독했던 상품 페이징 쿼리 생성(완료)
