--- a/_posts/JIHO/HD/2022-01-04-jiho20220104.md
+++ b/_posts/JIHO/HD/2022-01-04-jiho20220104.md
@@ -4,6 +4,6 @@ title:  "2022-01-04 화요일 개발일지"
 categories: 현대백화점
 ---
 
-# 마이페이지 구독투홈
+## 마이페이지 구독투홈
 - 현재 구독중인 상품 페이징처리(진행중)
 - 과거 구독했던 상품 페이징처리(진행중)
