--- a/_posts/JIHO/HD/2022-01-13-jiho20220113.md
+++ b/_posts/JIHO/HD/2022-01-13-jiho20220113.md
@@ -5,11 +5,11 @@ title:  "2022-01-12
 categories: 현대백화점
 ---
 ## 정기구독 상세
-    - 1. 배송주기 설정 배달시간 삭제
+    - 1. 배송주기 설정 배달시간 삭제[완료]
     - 2. 이용기간 1개월 선택시 2달1회 disable
-    - 3. 날짜 포멧 수정
+    - 3. 날짜 포멧 수정 - 
 ## 구독 신청
-    - 1. 주문하기 페이지 > 브랜드직송, 배달상품 자사카드 결제불가
+    - 1. 주문하기 페이지 > 브랜드직송, 배달상품 자사카드 결제불가 [완료]
     - 2. 배달요청사항 테이블 수정
 
 ## 마이페이지 
