--- a/_posts/JIHO/HD/2022-01-13-jiho20220113.md
+++ b/_posts/JIHO/HD/2022-01-13-jiho20220113.md
@@ -6,7 +6,7 @@ categories: 현대백화점
 ## 정기구독 상세
     - 1. 배송주기 설정 배달시간 삭제[완료]
     - 2. 이용기간 1개월 선택시 2달1회 disable
-    - 3. 날짜 포멧 수정 - 
+    - 3. 날짜 포멧 수정 
 ## 구독 신청
     - 1. 주문하기 페이지 > 브랜드직송, 배달상품 자사카드 결제불가 [완료]
     - 2. 배달요청사항 테이블 수정
@@ -14,16 +14,16 @@ categories: 현대백화점
 ## 마이페이지 
     - 배송지 수정버튼 disable
 
-## 마이페이지 > 구독투홈 > 과거 구독중인 상품
+## 마이페이지 > 구독투홈 > 과거 구독중인 상품 [완료]
     - [x]  현재 구독중인 상품 상세 PATH 지정
     
-## 마이페이지 > 구독투홈 > 과거 구독중인 상품
+## 마이페이지 > 구독투홈 > 과거 구독중인 상품 [완료]
     - [x]  과거 구독했던 상품 상세 PATH 지정
 
-## 개발서버 적용에러 수정건
+## 개발서버 적용에러 수정건 [완료]
     - 정기구독 상세페이지 버그원인 분석 (Git history)
     - 원인이 되는 소스 위치 파악
-    - 원인이 되는 소스 수정 및 보안
+    - 원인이 되는 소스 수정 및 보안[정기구독 상세 3번 관련]
 
 ## 확인사항
     - F-TIS(화면번호 PD063)에서 한글표시사항(이미지) 등록시 정기구독 상세 상품정보에서 이미지 노출기능 CHECK
