--- a/_posts/JIHO/HD/2022-01-14-jiho20220114.md
+++ b/_posts/JIHO/HD/2022-01-14-jiho20220114.md
@@ -6,8 +6,8 @@ categories: 현대백화점
 ## 정기구독 상세
     - 1. 배송주기 설정 배달시간 삭제[완료]
     - 2. 이용기간 1개월 선택시 2달1회 disable
-    - 3. 날짜 포멧 수정 [완료]
-    
+    - 3. 날짜 포멧 수정 [완료] >> 배포 후 개발서버 반영 확인 [완료]
+
 ## 구독 신청
     - 1. 주문하기 페이지 > 브랜드직송, 배달상품 자사카드 결제불가 [완료]
     - 2. 배달요청사항 테이블 수정
@@ -17,3 +17,16 @@ categories: 현대백화점
 
 ## 확인사항
     - F-TIS(화면번호 PD063)에서 한글표시사항(이미지) 등록시 정기구독 상세 상품정보에서 이미지 노출기능 CHECK
+
+## 정기구독 신청시 간편결제 카드 정보 테이블
+
+## 정기구독 결제시 수량에 따른 금액정보 테이블
+
+## 바로투홈 모바일 전시구좌 퍼블 반영테스트
+
+## 결제 테이블 
+
+## 회차별 상품필수정보
+
+    - 1. 상품필수정보 리스트 쿼리 > 회차별 상품필수정보 리스트 쿼리로 수정
+    - Service단 회차정보 쿼리로 넘기기
