--- a/_posts/JIHO/HD/jiho20220115.md
+++ b/_posts/JIHO/HD/jiho20220115.md
@@ -38,3 +38,25 @@ categories: 현대백화점
     ### 매거진페이지 정기구독 상품 노출 오류
 
     ### 새벽투홈 카테고리란 정기구독 상품 노출오류
+
+    [Mobile App]
+
+    [링크 Path경로 이슈]
+    As IS
+    바로투홈 메인 > 바로투홈
+    새벽투홈 > 바로투홈 / 비정상
+
+    Tobe
+    바로투홈 메인 > 바로투홈 상풍만
+    새벽투홈 > 바로투홈  + 새벽투홈
+
+
+    새벽투홈 메인 > 구독메인
+                    AsIS : 바로투홈 링크만 출력, 새벽투홈 링크 미출력 
+                    ToBe : 바로투홈, 새벽투홈 출력으로 수정 필요
+
+    [이미지 이슈]
+    바로투홈 이미지 깨짐
+
+
+    - 새벽투홈메인 > 베스트
