--- a/_posts/JIHO/HD/jiho20220118.md
+++ b/_posts/JIHO/HD/jiho20220118.md
@@ -1,6 +1,6 @@
 ---
 layout: single
-title:  "2022-01-16 일요일 개발일지"
+title:  "2022-01-17 월요일 개발일지"
 categories: 현대백화점
 ---
 ## 정기구독 상세
@@ -55,30 +55,9 @@ categories: 현대백화점
     As IS
     바로투홈 메인 > Only 바로투홈 상품
     새벽투홈 > 바로투홈 / 비정상
+                바로투홈상품 : 그로서리 G, 배달상품 D
 
     Tobe
     바로투홈 메인 > Only 바로투홈 상품
     새벽투홈 > 바로투홈  + 새벽투홈
-
-
-    - 새벽투홈메인 > 베스트
-
-    명동역 지점 2층 4번출구
-    건강보험자격
-    임대차
-    주민등록등본
-    가족관계증명서
-
-    주민번호 뒷자리까지
-    국세청 > 
-
-    ## 회의록
-
-        ### 주문
-
-            배치(O) > PG > 완료
-        
-
-        ### 일반 주문
-
-            배치(X) > PG > 완료
+                        새벽투홈상품 : 브랜드 jmj(샐러) O, 새벽배송 S
