--- a/_posts/JIHO/HD/jiho20220116.md
+++ b/_posts/JIHO/HD/jiho20220116.md
@@ -63,22 +63,30 @@ categories: 현대백화점
 
     - 새벽투홈메인 > 베스트
 
+    ## 2022 01 19 전세자금 대출 준비서류 [완료]
     명동역 지점 2층 4번출구
     건강보험자격
     임대차
     주민등록등본
     가족관계증명서
-
     주민번호 뒷자리까지
-    국세청 > 
+
 
     ## 회의록
 
         ### 주문
-
             배치(O) > PG > 완료
-        
-
         ### 일반 주문
-
             배치(X) > PG > 완료
+
+    ## 정기구독 상세 
+
+        [] 회차 > 비고 추가
+        [] 상품필수정보 > 한글표시사항(이미지) 추가
+
+        사전작업
+        BACK단 작업
+            이미지 관련 테이블 JION, 비고 SELECT
+        FRONT단 작업
+            productDetail.jsp > product.Detail.pc.js 파라미터 전달(이미지경로, 이미지)
+    
