--- a/_posts/JIHO/HD/jiho20220119.md
+++ b/_posts/JIHO/HD/jiho20220119.md
@@ -1,36 +1,8 @@
 ---
 layout: single
-title:  "2022-01-17 월요일 개발일지"
+title:  "2022-01-19 수요일 개발일지"
 categories: 현대백화점
 ---
-## 정기구독 상세
-    - 1. 배송주기 설정 배달시간 삭제[완료]
-    - 2. 이용기간 1개월 선택시 2달1회 disable
-    - 3. 날짜 포멧 수정 [완료] >> 배포 후 개발서버 반영 확인 [완료]
-
-## 구독 신청
-    - 1. 주문하기 페이지 > 브랜드직송, 배달상품 자사카드 결제불가 [완료]
-    - 2. 배달요청사항 테이블 수정
-
-## 마이페이지 
-    - 배송지 수정버튼 disable
-
-## 확인사항
-    - F-TIS(화면번호 PD063)에서 한글표시사항(이미지) 등록시 정기구독 상세 상품정보에서 이미지 노출기능 CHECK
-
-## 정기구독 신청시 간편결제 카드 정보 테이블
-
-## 정기구독 결제시 수량에 따른 금액정보 테이블
-
-## 바로투홈 모바일 전시구좌 퍼블 반영테스트
-
-## 결제 테이블 
-
-## 회차별 상품필수정보
-
-    - 1. 상품필수정보 리스트 쿼리 > 회차별 상품필수정보 리스트 쿼리로 수정
-    - Service단 회차정보 쿼리로 넘기기
-
 ## TMS LIST
 
     ### 카테고리페이지 정기구독 상품 노출 > 미노출 수정 완료
@@ -53,7 +25,6 @@ categories: 현대백화점
     
     3. 데이터 미출력 이슈
 
-    
     As IS
     바로투홈 메인 > Only 바로투홈 상품
     새벽투홈 > 바로투홈 / 비정상
@@ -64,16 +35,14 @@ categories: 현대백화점
     새벽투홈 > 바로투홈  + 새벽투홈
                         새벽투홈상품 : 브랜드 jmj(샐러) O, 새벽배송 S
 
-    - 새벽투홈메인 > 베스트
+## 정기구독 상세 [퍼블 수정 필요]
 
-    ## 회의록
+    [x] 회차 > 비고 추가
+    [x] 상품필수정보 > 한글표시사항(이미지) 추가
 
-        ### 주문
-
-            배치(O) > PG > 완료
-        
-
-        ### 일반 주문
-
-            배치(X) > PG > 완료
+    ### 사전작업
+        BACK단 작업
+            이미지 관련 테이블 JION, 비고 SELECT
+        FRONT단 작업
+            productDetail.jsp > product.Detail.pc.js 파라미터 전달(이미지경로, 이미지)
 
