--- a/_posts/JIHO/HD/jiho20220120.md
+++ b/_posts/JIHO/HD/jiho20220120.md
@@ -3,46 +3,9 @@ layout: single
 title:  "2022-01-20 목요일 개발일지"
 categories: 현대백화점
 ---
-## 정기구독 상세
-    - 1. 배송주기 설정 배달시간 삭제[완료]
-    - 2. 이용기간 1개월 선택시 2달1회 disable
-    - 3. 날짜 포멧 수정 [완료] >> 배포 후 개발서버 반영 확인 [완료]
-
-## 구독 신청
-    - 1. 주문하기 페이지 > 브랜드직송, 배달상품 자사카드 결제불가 [완료]
-    - 2. 배달요청사항 테이블 수정
-
-## 마이페이지 
-    - 배송지 수정버튼 disable
-
-## 확인사항
-    - F-TIS(화면번호 PD063)에서 한글표시사항(이미지) 등록시 정기구독 상세 상품정보에서 이미지 노출기능 CHECK
-
-## 정기구독 신청시 간편결제 카드 정보 테이블
-
-## 정기구독 결제시 수량에 따른 금액정보 테이블
-
-## 바로투홈 모바일 전시구좌 퍼블 반영테스트
-
-## 결제 테이블 
-
-## 회차별 상품필수정보
-
-    - 1. 상품필수정보 리스트 쿼리 > 회차별 상품필수정보 리스트 쿼리로 수정
-    - Service단 회차정보 쿼리로 넘기기
 
 ## TMS LIST
-
-    ### 카테고리페이지 정기구독 상품 노출 > 미노출 수정 완료
-
-    ### 매거진페이지 정기구독 상품 노출 오류
-
-    ### 새벽투홈 카테고리란 정기구독 상품 노출오류
-
-    ### 바로투홈 메인 상품리스트 이미지 깨짐 수정 완료
-
-    [Mobile App]
-
+ 
     ### 링크 미출력 이슈 [완료]
         새벽투홈 메인 > 구독메인
                     AsIS : 바로투홈 링크만 출력, 새벽투홈 링크 미출력 
@@ -67,8 +30,9 @@ categories: 현대백화점
 
     ### 화면ID: HDMP_01_53, 상품형태 미노출 오류
 
+## 2022.01.21 TMS MOBILE 처리를 위한 코엑스 출근 예정
+
 ## TMS 외의 확인건
 
     ### 카테고리 배달상품/브랜드상품 구분없이 리스트 출력건 > 쿼리수정 필요
-
     ### 배송지 수정사항 > 수정버튼 hidden OR 기능X 수정건
