--- a/_posts/JIHO/HD/jiho20220120.md
+++ b/_posts/JIHO/HD/jiho20220120.md
@@ -11,16 +11,16 @@ categories: 현대백화점
                     AsIS : 바로투홈 링크만 출력, 새벽투홈 링크 미출력 
                     ToBe : 바로투홈, 새벽투홈 출력으로 수정 필요
         APP
-            새벽 > 새벽 [O]
-            배달 > 배달 [O]
+            새벽 > 새벽 [O] (새벽상품, 브랜드직송)
+            배달 > 배달 [O] (그로서리, 배달)
             마이페이지 투홈구독 버튼 >> 이윤석 선임 확인완료건
 
         WEB [Mobile]
-            새벽 > 새벽 [O]
+            새벽 > 새벽 [O] (새벽상품, 브랜드직송)
             배달 X
 
         WEB [PC]
-            새벽 > 새벽 [O]
+            새벽 > 새벽 [O] (새벽상품, 브랜드직송)
             배달 X
 
     ### 화면ID: HDMP_01_85, 오류제목 : 앱 > 마에피이지 > 투홈구독
