--- a/_posts/JIHO/HD/jiho20220121.md
+++ b/_posts/JIHO/HD/jiho20220121.md
@@ -14,7 +14,7 @@ categories: 현대백화점
         Mobile APP TEST 필요
 
     ### 화면ID: HDMP_01_53, 상품형태 미노출 오류
-
+        Mobile > 정기구독 [배달, 그로서리 상품형태 노출]
 
 ## TMS 외의 확인건
 
