--- a/_posts/JIHO/HD/jiho20220121.md
+++ b/_posts/JIHO/HD/jiho20220121.md
@@ -8,15 +8,17 @@ categories: 현대백화점
 
 ## TMS LIST
  
-    ### 화면ID: HDMP_01_85, 오류제목 : 앱 > 마에피이지 > 투홈구독
+    ### 화면ID: HDMP_01_85, 오류제목 : 앱 > 마에피이지 > 투홈구독 [완료]
 
         LOCAL TEST 이상없음
         Mobile APP TEST 필요
 
-    ### 화면ID: HDMP_01_53, 상품형태 미노출 오류
+    ### 화면ID: HDMP_01_53, 상품형태 미노출 오류 [완료]
         Mobile > 정기구독 [배달, 그로서리 상품형태 노출]
+        새벽투홈 > 바로투홈 노출
 
 ## TMS 외의 확인건
 
     ### 카테고리 배달상품/브랜드상품 구분없이 리스트 출력건 > 쿼리수정 필요
     ### 배송지 수정사항 > 수정버튼 hidden OR 기능X 수정건
+    ### 매거진 정기구독 노출관련 이윤석선임 요청사항 확인 필요
