--- a/_posts/JIHO/HD/jiho20220125.md
+++ b/_posts/JIHO/HD/jiho20220125.md
@@ -1,6 +1,6 @@
 ---
 layout: single
-title:  "2022-01-24 월요일 개발일지"
+title:  "2022-01-25 화요일 개발일지"
 categories: 현대백화점
 ---
 
@@ -34,14 +34,15 @@ categories: 현대백화점
 
 ## 개발 수정 요청건
 
+    OD_ORD_DTL
     ### 마이페이지/주문목록
         1. 주문목록 : 주문건수 수정 필요
         2. 주문목록/주문상세
-            2-1. 상단 : 배송건수 수정 필요 > 본상품 단위로 수량 수정  >>  구독권 수로 변경 필요
-            2-2. 중단 : 상품금액 - 정가 OR 최소주문금액              >>  최초 주문금액 노출로 변경
+            2-1. 상단 : 배송건수 수정 필요 > 본상품 단위로 수량 수정  >>  구독권 수로 변경 필요      [X]
+            2-2. 중단 : 상품금액 - 정가 OR 최소주문금액              >>  최초 주문금액 노출로 변경  [x]
             2-2. 하단 : 결제정보 수정 필요                          
                 2-2-1. 총 상품금액 :    구성상품금액 제외
-                2-2-2. 할인금액 :       할인금액 표기 
+                2-2-2. 할인금액 :       할인금액 표기                >>  할인금액 노출             [X]
             2-3. 주문상세/거래명세서 : 구성상품 가격 수정 필요
 
     ### 정기구독 상세
@@ -66,5 +67,21 @@ categories: 현대백화점
     ### 배송지 수정사항 > 수정버튼 hidden OR 기능X 수정건
     ### 매거진 정기구독 노출관련 이윤석선임 요청사항 확인 필요
 
+
+
+
+
+
+
+
 ## 회의록
 
+    ### 
+
+    구독상품상세 : 배송금액이 NULL이면 공통배송비(3500) 적용
+
+
+    상품운영회차    100회차     101회차
+    수령차수        신청        1차수
+
+    테스트 > 데이터인입 체크
