--- a/_posts/JIHO/HD/jiho20220126.md
+++ b/_posts/JIHO/HD/jiho20220126.md
@@ -36,13 +36,14 @@ categories: 현대백화점
 
     OD_ORD_DTL
     ### 마이페이지/주문목록
-        1. 주문목록 : 주문건수 수정 필요
+        1. 주문목록 : 주문건수 수정 필요                                                 [X]
         2. 주문목록/주문상세
-            2-1. 상단 : 배송건수 수정 필요 > 본상품 단위로 수량 수정  >>  구독권 수로 변경 필요      [X]
-            2-2. 중단 : 상품금액 - 정가 OR 최소주문금액              >>  최초 주문금액 노출로 변경  [x]
+            2-1. 배송건수 수정 필요 > 본상품 단위로 수량 수정  >>  구독권 수로 변경 필요    [X]
             2-2. 하단 : 결제정보 수정 필요                          
-                2-2-1. 총 상품금액 :    구성상품금액 제외
-                2-2-2. 할인금액 :       할인금액 표기                >>  할인금액 노출             [X]
+                2-2-1. 총 상품금액 :    ASIS - 배송비 미포함, TOBE - 배송비 포함          [x]
+                2-2-2. 할인금액 :                                                       [X]
+                    ASIS - 정기구독 구분없이 기존 할인정책 적용, 
+                    TOBE - 정기구독상품에 신규 정기구독 할인정책 적용
             2-3. 주문상세/거래명세서 : 구성상품 가격 수정 필요
 
     ### 정기구독 상세
