--- a/_posts/JIHO/HD/jiho20220119.md
+++ b/_posts/JIHO/HD/jiho20220119.md
@@ -6,34 +6,36 @@ categories: 현대백화점
 ## TMS LIST
 
     ### 카테고리페이지 정기구독 상품 노출 > 미노출 수정 완료
-
     ### 매거진페이지 정기구독 상품 노출 오류
-
     ### 새벽투홈 카테고리란 정기구독 상품 노출오류
-
     ### 바로투홈 메인 상품리스트 이미지 깨짐 수정 완료
 
     [Mobile App]
 
     1. 이미지 이슈 [수정완료]
-    바로투홈 이미지 깨짐
 
-    2. 링크 미출력 이슈
-    새벽투홈 메인 > 구독메인
+        바로투홈 이미지 깨짐
+
+
+    2. 링크 미출력 이슈 [기획서 확인 필요]
+
+        새벽투홈 메인 > 구독메인
                     AsIS : 바로투홈 링크만 출력, 새벽투홈 링크 미출력 
                     ToBe : 바로투홈, 새벽투홈 출력으로 수정 필요
     
+
     3. 데이터 미출력 이슈
 
-    As IS
-    바로투홈 메인 > Only 바로투홈 상품
-    새벽투홈 > 바로투홈 / 비정상
-                바로투홈상품 : 그로서리 G, 배달상품 D
+        As IS
+        바로투홈 메인 > Only 바로투홈 상품
+        새벽투홈 > 바로투홈 / 비정상
+                    바로투홈상품 : 그로서리 G, 배달상품 D
 
-    Tobe
-    바로투홈 메인 > Only 바로투홈 상품
-    새벽투홈 > 바로투홈  + 새벽투홈
-                        새벽투홈상품 : 브랜드 jmj(샐러) O, 새벽배송 S
+        Tobe
+        바로투홈 메인 > Only 바로투홈 상품
+        새벽투홈 > 바로투홈  + 새벽투홈
+                            새벽투홈상품 : 브랜드 jmj(샐러) O, 새벽배송 S
+
 
 ## 정기구독 상세 [퍼블 수정 필요]
 
@@ -41,6 +43,7 @@ categories: 현대백화점
     [x] 상품필수정보 > 한글표시사항(이미지) 추가
 
     ### 사전작업
+
         BACK단 작업
             이미지 관련 테이블 JION, 비고 SELECT
         FRONT단 작업
