--- a/_posts/BLACKCODE/AI/2021-10-05-Chapter05.md
+++ b/_posts/BLACKCODE/AI/2021-10-05-Chapter05.md
@@ -1,6 +1,6 @@
 ---
 layout: single
-title:  "CHAPTER 05"
+title:  "혼자 공부하는 머신러닝 + 딥러닝 CHAPTER 05"
 categories: AI
 ---
 # ======================== 05-1 결정트리 ========================
