--- a/_posts/BLACKCODE/AI/2021-10-06-Chapter06.md
+++ b/_posts/BLACKCODE/AI/2021-10-06-Chapter06.md
@@ -1,6 +1,6 @@
 ---
 layout: single
-title:  "CHAPTER 06"
+title:  "혼자 공부하는 머신러닝 + 딥러닝 CHAPTER 06"
 categories: AI
 ---
 # ======================== 06-1 군집 알고리즘 ========================
