--- a/_posts/JIHO/HD/jiho20220120.md
+++ b/_posts/JIHO/HD/jiho20220120.md
@@ -11,8 +11,8 @@ categories: 현대백화점
                     AsIS : 바로투홈 링크만 출력, 새벽투홈 링크 미출력 
                     ToBe : 바로투홈, 새벽투홈 출력으로 수정 필요
         APP
-            새벽 > 새벽 [O] (새벽상품, 브랜드직송)
-            배달 > 배달 [O] (그로서리, 배달)
+            새벽 > 새벽 [O] (새벽상품 S, 브랜드직 O)
+            배달 > 배달 [O] (그로서리 G, 배달 D)
             마이페이지 투홈구독 버튼 >> 이윤석 선임 확인완료건
 
         WEB [Mobile]
