--- a/_posts/JIHO/HD/jiho20220203.md
+++ b/_posts/JIHO/HD/jiho20220203.md
@@ -1,13 +1,12 @@
 ---
 layout: single
-title:  "2022-01-27 목요일 개발일지"
+title:  "2022-02-03 목요일 개발일지"
 categories: 현대백화점
 ---
 
 ## 개발 수정 요청건
 
-    OD_ORD_DTL
-    ### 마이페이지/주문목록
+    ### 마이페이지/주문목록 [PC, Mobile 개발 수정 및 배포 완료]
         1. 주문목록 : 주문건수 수정 필요                                                 [X]
         2. 주문목록/주문상세
             2-1. 배송건수 수정 필요 > 본상품 단위로 수량 수정  >>  구독권 수로 변경 필요    [X]
@@ -16,7 +15,7 @@ categories: 현대백화점
                 2-2-2. 할인금액 :                                                       [X]
                     ASIS - 정기구독 구분없이 기존 할인정책 적용, 
                     TOBE - 정기구독상품에 신규 정기구독 할인정책 적용
-            2-3. 주문상세/거래명세서 : 구성상품 가격 수정 필요                             [진행중]
+            2-3. 주문상세/거래명세서 : 구성상품 가격 수정 필요                             [x]
 
     ### 정기구독 상세
         배송비 정보 수정
@@ -33,27 +32,6 @@ categories: 현대백화점
 
 ## TMS 외의 확인건
 
-    ### 정기구독 상세 > 상품필수정보 : 한글표시사항 이미지 퍼블 적용
+    ### 정기구독 상세 > 상품필수정보 : 한글표시사항 이미지 퍼블 적용        [PC,Mobile 적용 완료]
     ### 카테고리 배달상품/브랜드상품 구분없이 리스트 출력건 > 쿼리수정 필요
-    ### 배송지 수정사항 > 수정버튼 hidden OR 기능X 수정건
     ### 매거진 정기구독 노출관련 이윤석선임 요청사항 확인 필요 
-
-
-
-
-
-
-
-
-
-## 회의록
-
-    ### 
-
-    구독상품상세 : 배송금액이 NULL이면 공통배송비(3500) 적용
-
-
-    상품운영회차    100회차     101회차
-    수령차수        신청        1차수
-
-    테스트 > 데이터인입 체크
