--- a/_posts/JIHO/HD/jiho20220204.md
+++ b/_posts/JIHO/HD/jiho20220204.md
@@ -5,7 +5,7 @@ categories: 현대백화점
 ---
 ## TMS LIST
 
-    ### 화면ID : HDMP_01_75
+    ### 화면ID : HDMP_01_75 [완료]
         오류제목 : 배송요청사항 노출안됨 / PC 노출O, Mobile 노출X
     
     ### 화면ID : HDMP_01_12
