--- a/_posts/JIHO/HD/jiho20220210.md
+++ b/_posts/JIHO/HD/jiho20220210.md
@@ -1,6 +1,6 @@
 ---
 layout: single
-title:  "2022-02-09 화요일 개발일지"
+title:  "2022-02-10 목요일 개발일지"
 categories: 현대백화점
 ---
 ## TMS LIST
@@ -8,22 +8,17 @@ categories: 현대백화점
     ### 화면ID : HDMP_01_12
         오류제목 : 상품상세 확인요청/ 정기구독 신청금액 0원 이슈            [보류]
 
-    ### 링크 미출력 이슈 [완료]
-        새벽투홈 메인 > 구독메인
-                    AsIS : 바로투홈 링크만 출력, 새벽투홈 링크 미출력 
-                    ToBe : 바로투홈, 새벽투홈 출력으로 수정 필요
-        APP
-            새벽 > 새벽 [O] (새벽상품 S, 브랜드직 O)
-            배달 > 배달 [O] (그로서리 G, 배달 D)
-            마이페이지 투홈구독 버튼 >> 이윤석 선임 확인완료건
+    ### 새벽상품에 배달상품 노출오류 [완료]
+    
+    ### 마이페이지 > 투홈구독 > 현재 구독중인 상품
+        버튼기능 미활성 이슈건 [완료 > 반영확인 미완료]
+            1회 맛보기  [x]
+            구독종료    [x]
 
-        WEB [Mobile]
-            새벽 > 새벽 [O] (새벽상품, 브랜드직송)
-            배달 X
-
-        WEB [PC]
-            새벽 > 새벽 [O] (새벽상품, 브랜드직송)
-            배달 X
+    ### 구독신청 > 배송지변경
+        권역체크 미활성화건 [확인사항 이상없음]
+            이륜차배달  > 권역체크 활성화 [x]
+            수기관리    > 권역체크 미활성 [x]
 
 ## TMS 외의 확인건
 
