--- a/_posts/JIHO/HD/jiho20220214.md
+++ b/_posts/JIHO/HD/jiho20220214.md
@@ -4,35 +4,12 @@ title:  "2022-02-14 월요일 개발일지"
 categories: 현대백화점
 ---
 ## TMS LIST
-     
-    ### 마이페이지 > 투홈구독 > 현재 구독중인 상품
-        버튼기능 미활성 이슈건 [완료
-            1회 맛보기  [x]
-            구독종료    [x]
 
-    ### 구독신청 > 배송지변경
-        권역체크 미활성화건 [확인사항 이상없음 > 완료]
-            이륜차배달  > 권역체크 활성화 [x]
-            수기관리    > 권역체크 미활성 [x]
+    ### 바로투홈 메인 구좌노출 오류
 
-    ### 마이페이지
-            현재 구독중인 상품
-                - 구독종료 > 다시구독 후 1회 맛보기 클릭시 버튼기능 미활성화 이슈 [x]
-                - mobile 수량표기 [x]
+    ### 새벽투홈 메인 구좌노출 오류
 
-            과거 구독중인 상품
-                - 쿼리수정 [x]
-                - 쿼리수정 반영
-                    *정기구독 개편 > 정기구독개편&GroupPay > master-prj
-                - master-prj server build 이슈 발생 > 서버 접속 불가
-                - 수정내역중 해당 쿼리 수정부분 주석에서 '--' 하이픈 원인으로 발생
-                - 해당 하이픈 삭제 후 재기동
-                - 정상화 확인
-
-    ### 바로투홈 접속시 화면버그 수정 요청건 
-
-## TMS 외의 확인건
+## 정기구독 FULL TEST 시나리오
 
     
-    ### 카테고리 배달상품/브랜드상품 구분없이 리스트 출력건 > 쿼리수정 필요
-    ### 매거진 정기구독 노출관련 이윤석선임 요청사항 확인 필요 
+## 상품할인 지원
