--- a/_posts/JIHO/HD/jiho20220215.md
+++ b/_posts/JIHO/HD/jiho20220215.md
@@ -3,13 +3,15 @@ layout: single
 title:  "2022-02-15 화요일 개발일지"
 categories: 현대백화점
 ---
-## TMS LIST
+## TMS LIST [완료]
 
-    ### 바로투홈 메인 구좌노출 오류
-
-    ### 새벽투홈 메인 구좌노출 오류
+    ### 바로투홈 메인 구좌노출 오류 [x]
+    ### 새벽투홈 메인 구좌노출 오류 [x]
 
 ## 정기구독 FULL TEST 시나리오
 
     
-## 상품할인 지원
+## 상품할인 지원 (목표일정 : 2/23)
+
+    [PC] 주문
+    [PC] 장바구니
