--- a/_posts/JIHO/HD/jiho20220216.md
+++ b/_posts/JIHO/HD/jiho20220216.md
@@ -6,6 +6,10 @@ categories: 현대백화점
 
 ## 정기구독 FULL TEST 시나리오
 
+    ### 바로투홈 정기구독 구좌 모바일 테스트
+
+## 상품할인 퍼블 작업 LIST
+
 ## 상품할인 지원 가이드 (오후 1시)
 
 ## 상품할인 지원 (목표일정 : 2/23)
