--- a/_posts/JIHO/HD/jiho20220216.md
+++ b/_posts/JIHO/HD/jiho20220216.md
@@ -6,6 +6,8 @@ categories: 현대백화점
 
 ## 정기구독 FULL TEST 시나리오
 
+    ### 새벽투홈 메인 정기구독 전시구좌 버그 수정 [x]
+
 ## 상품할인 지원 가이드 (오후 1시)
 
 ## 상품할인 지원 (목표일정 : 2/23)
