--- a/_posts/JIHO/HD/jiho20220216.md
+++ b/_posts/JIHO/HD/jiho20220216.md
@@ -14,3 +14,13 @@ categories: 현대백화점
 
     [PC] 주문
     [PC] 장바구니
+
+## 회의록
+
+    - Test case 작성
+        주문 신청
+        주문 취소
+
+    - PC 개발영역
+        주문 신청
+        주문 취소
