--- a/_posts/JIHO/HD/jiho20220216.md
+++ b/_posts/JIHO/HD/jiho20220216.md
@@ -6,17 +6,14 @@ categories: 현대백화점
 
 ## 정기구독 FULL TEST 시나리오
 
-<<<<<<< HEAD
     ### 새벽투홈 메인 정기구독 전시구좌 버그 수정 [x]
-=======
     ### 바로투홈 정기구독 구좌 모바일 테스트
 
 ## 상품할인 퍼블 작업 LIST
->>>>>>> acd9fb1f38481b484ab031bfa2872ce8f9420463
 
-## 상품할인 지원 가이드 (오후 1시)
+## 상품할인 지원 가이드 (오후 1시) [완료]
 
-## 상품할인 지원 (목표일정 : 2/23)
+## 상품할인 지원 (목표일정 : 2/23) [종료]
 
     [PC] 주문
     [PC] 장바구니
