--- a/_posts/JIHO/HD/jiho20220216.md
+++ b/_posts/JIHO/HD/jiho20220216.md
@@ -18,6 +18,10 @@ categories: 현대백화점
     [PC] 주문
     [PC] 장바구니
 
+## CASE별 상품등록 [진행중]
+
+    ### TMS > 테스트케이스 관리 참고
+
 ## 회의록
 
     - Test case 작성
