--- a/_posts/MegazoneCloud/2022-08-08-Megazone.md
+++ b/_posts/MegazoneCloud/2022-08-08-Megazone.md
@@ -5,34 +5,35 @@ categories: MegazoneCloud
 ---
 
 # 메가존클라우드
-
+<br>
 ## VPN point to site
  
 
 # 신규입사자 대상 프로세스 설명회 - 2A
+<br>
 
+## * 문서기안 Dockwave 관련
 
-### * 문서기안 Dockwave 관련
+### 프로세스 필수 ("팀장 > 그룹장 > 센터장")
+### 해당 프로세스는 예외없이 모든 기안에 무조건 적용
+<br>
 
-#### 프로세스 필수 ("팀장 > 그룹장 > 센터장")
-#### 해당 프로세스는 예외없이 모든 기안에 무조건 적용
+## * 생일휴가(5시간)
 
+### 5시간짜리 기안 작성하고 그냥 하루 쉬면됨
+<br>
 
-### * 생일휴가(5시간)
+## * 통신비 지원
 
-#### 5시간짜리 기안 작성하고 그냥 하루 쉬면됨
+### 전월 통신비 납부내역서와 함께 제출
+### 월 3만원씩 지원
+### 전월25 -> 당월 24일 사용 후 말일 팀장님께 전달
+### 수습기간 이후에 지원 가능 >> 8월부터 지원
+### 경비정산서
+#### - KB국민카드(기업회원) 미리 가입 (OT 문서 참조)
+#### - 승인내역 (전월25 -> 당월 24일)
+<br>
 
-
-### * 통신비 지원
-
-#### 전월 통신비 납부내역서와 함께 제출
-#### 월 3만원씩 지원
-#### 전월25 -> 당월 24일 사용 후 말일 팀장님께 전달
-#### 수습기간 이후에 지원 가능 >> 8월부터 지원
-#### 경비정산서
-##### - KB국민카드(기업회원) 미리 가입 (OT 문서 참조)
-##### - 승인내역 (전월25 -> 당월 24일)
-
-### * Teams
-
-#### 기존 Office 삭제 > Office365 설치(Office 365 App)
+## * Teams
+### 기존 Office 삭제 > Office365 설치(Office 365 App)
+<br>
